--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,8 +1,7 @@
 #----------------------
 # About section
 
-blurb: <p><strong>Chemistry, medicine, and the human condition.</strong> I am a budding chemist, soon to be on the job market. My research interests are in the areas of psychological disorders, chemical imbalances, and psychiatric pharmacology. My doctoral disertation was on repressing psychotic tendancies with household serums and I plan to continue this research... at all costs.</p>
-
+blurb: <p><strong>Chemistry.</strong>  My research interests are in the areas of balls.
 #----------------------
 # Courses section
 courses:
